--- a/HSLP/assets/CSS/styles.css
+++ b/HSLP/assets/CSS/styles.css
@@ -1,6 +1,7 @@
 @import url("styles/header.css");
 @import url("styles/intro.css");
 @import url("styles/intro-companys.css");
+@import url("styles/about.css");
 
 :root {
     --font: 'Raleway';
